styles: Fix vertical align of context item titles inside cx tools, to align correctly with icons
Card titles inside cx tools (except for regular link cards) are poorly positioned and misaligned
with their respective icons. In order to fix that I suggest to move the 'vertical-align: middle'
rule from ve.ui.CXLinkContextItem.less stylesheet (applied to regular link cards) to
ve.ui.CXDesktopContext.less stylesheet, so that it is applied to every element needed.

Bug: T235850

--- a/modules/ve-cx/ui/styles/ve.ui.CXDesktopContext.less
+++ b/modules/ve-cx/ui/styles/ve.ui.CXDesktopContext.less
@@ -6,6 +6,14 @@
 	.ve-ui-desktopContext-menu {
 		position: static;
 		width: auto;
+
+		.ve-ui-linearContextItem > .ve-ui-linearContextItem-head {
+			> .ve-ui-linearContextItem-title {
+				> .oo-ui-labelWidget {
+					vertical-align: middle;
+				}
+			}
+		}
 	}
 
 	.ve-ui-contextItem,
