--- a/modules/ve-cx/ui/styles/ve.ui.CXLinkContextItem.less
+++ b/modules/ve-cx/ui/styles/ve.ui.CXLinkContextItem.less
@@ -7,10 +7,6 @@
 
 	> .ve-ui-linearContextItem-title {
 		margin-right: 0.5em;
-
-		> .oo-ui-labelWidget {
-			vertical-align: middle;
-		}
 	}
 }
 
